<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bank</string>
    <string name="account_placeholder">Account Number</string>
    <string name="add">Add</string>
    <string name="ask_contact_number">Enter registered Mobile No.</string>
    <string name="benificiary_name">Payee Name</string>
    <string name="block_card">Close Debit Card</string>
    <string name="confirm_button">Confirm</string>
    <string name="debit_card">Debit Card</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ifsc">IFSC</string>
    <string name="card_number">4561 XXXX XXXX 1547</string>
    <string name="mobile_hint">9867622542</string>
    <string name="money_transfer">Send Money</string>
    <string name="passbook">Passbook</string>
    <string name="password">Enter Password</string>
    <string name="setting">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="valid_date">Valid Date</string>
    <string name="visa">VISA</string>
    <string name="find">Find</string>
    <string name="change_password">Change Password</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="change_language">Change Language</string>
    <string name="back_button">Back</string>
    <string name="remain_balance">Balance</string>
    <string name="balance_value">₹5,000</string>
    <string name="old_password_hint">Enter Old Password</string>
    <string name="new_paasword_hint">Enter New Password</string>
    <string name="valid_date_text">VALID DATE:</string>
    <string name="send_receive_placeholder">Send/Receive</string>
    <string name="amount_placeholder">Amount</string>
    <string name="time_placeholder">Time</string>
    <string name="balance_placeholder">Balance</string>
    <string name="down_button">Down</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="user_name">Harish Kumar</string>
    <string name="name_placeholder">Name</string>
    <string name="helpsupport">Help Support</string>
    <string name="acc_number">12365212365</string>
</resources>