<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassword">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        android:text="@string/ask_contact_number"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/ContactNoET"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_corner_button"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mobile_hint"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/ConfirmB"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/confirm_button"
        android:textSize="22dp" />


</LinearLayout>