<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="हरीश कुमार"
            android:textSize="28sp" />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/help_button"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/question" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AccNo1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="खाता संख्या"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12365212365"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CurrentBalanceL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="शेष बैंक राशि"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CurrentBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹5,000"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_card"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="2dp"
            card_view:cardCornerRadius="24dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:background="#EFFFFF"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/CardNoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/card_number"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="40dp">


                    <TextView
                        android:id="@+id/ValidDateTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="VALID DATE:"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ValidDate2TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/valid_date"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/VisaTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/visa"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner_button"
            android:elevation="2dp">

            <ImageButton
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@drawable/round_corner_button"
                android:padding="10dp"
                android:scaleType="fitStart"
                android:src="@drawable/block_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="54dp"
                android:text="@string/block_card"
                android:textAllCaps="true"
                android:textSize="32sp"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>