<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:paddingRight="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:background="@color/colorPrimary"
                android:onClick="back"
                android:src="@drawable/back" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:onClick="help"
                android:src="@drawable/help" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_name"
            android:textSize="28sp" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AccNo1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AccNo2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12365212365"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CurrentBalanceL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain_balance"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CurrentBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_value"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="horizontal">

                <include
                    layout="@layout/activity_home_passbook_button"
                    android:layout_width="156dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp" />

                <include
                    layout="@layout/activity_home_card_button"
                    android:layout_width="155dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="horizontal">

                <include
                    layout="@layout/activity_home_money_button"
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp" />

                <include
                    layout="@layout/activity_home_settings_button"
                    android:layout_width="157dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp" />


            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/sign_out_button_view"
            layout="@layout/activity_sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="signOut" />

    </LinearLayout>
    </LinearLayout>
</LinearLayout>